23.0.9
------
(RB=1371503)
Support scatter-gather in rest.li client using ScatterGatherStrategy.

23.0.8
------
(RB=1361590)
StreamCodec integration in Restli client

23.0.7
------
(RB=1375493)
Flipping the map order from Set<KEY> -> URI to URI -> Set<KEY> in URIMapper results
(RB=1373478)
Skip unstructured data check in RestLiValidationFilter

23.0.6
------
(RB=1373158)
Cache SessionValidator to save validating time

23.0.5
------
(RB=1345119)
add R2Constants.CLIENT_REQUEST_TIMEOUT_VIEW and refactor requestTimeoutClient to always pass timeout value down

(RB=1359940)
Enable ZK SymLink redirection by default

23.0.4
------
(RB=1356919)
Improve cache ability of data template and request builder generating task

23.0.3
------
(RB=1356168)
Remove logs when data template task is disabled.

(RB=1359131)
Introduce RestLiClientConfig

(RB=1342900)
Retry markUp/Down in event of KeeperException.SessionExpiredException

(RB=1360221)
Fix warnings in ZooKeeperAnnouncerTest resulting in failed compile.

(RB=1317765)
Support BannedUris property for cluster


23.0.2
------
(RB=1351456)
Remove/Deprecate Promised based API support
(RB=1344180)
Unstructured Data update and delete Reactive
(RB=1352732)
Fix DataTranslator for ARRAY field types when converting a GenericRecord to DataMap

23.0.1
------
(RB=1340631)
Safely build validating schema on request if using projections, return HTTP 400 for projections with nonexistent fields
(RB=1352061)
Add serialization of degrader.preemptiveRequestTimeoutRate

23.0.0
------
(RB=1332535)
Add URIMapper class and changed getPartitionAccessor API (backwards incompatible)

22.0.5
------
(RB=1318132)
Unstructured Data Post Reactive

(RB=1342823)
Allow SslSessionNotTrustedException to extend RuntimeException

22.0.4
------
(RB=1309258)
Implements AsyncRateLimiter

22.0.3
------
(RB=1338284)
Revert "Build validating schema on request if using projections, return HTTP 400 for projections with nonexistent fields"

22.0.2
------
(RB=1336587)